--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 28 16:19:35 ICT 2023
-sdk.dir=C\:\\Users\\rhyzn\\AppData\\Local\\Android\\Sdk
+#Fri Dec 01 19:04:24 WIB 2023
+sdk.dir=/Users/bhismaadiyasa/Library/Android/sdk
