--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 01 19:04:24 WIB 2023
-sdk.dir=/Users/bhismaadiyasa/Library/Android/sdk
+#Sun Dec 03 20:15:06 ICT 2023
+sdk.dir=C\:\\Users\\rhyzn\\AppData\\Local\\Android\\Sdk
