Login Register API

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Dec 03 20:15:06 ICT 2023
-sdk.dir=C\:\\Users\\rhyzn\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/bhismaadiyasa/Library/Android/sdk
